# GothicVR

./: .gitattributes  .gitignore  .gitmodules  LICENSE  README.md
.github/: pull_request_template.md
.github/.github/: pull_request_template.md
.github/workflow/: build.yml
.github/workflows/: release.yml  remove_PR_data.yml  test_and_build.yml
Assets/: FileLoggingHandler.cs  GameTime.cs  NpcRoutine.cs  RoutineManager.cs
Assets/Editor/: UnityBuilderAction.cs
Assets/GVR-Flat-Adapter/: FlatClimbingAdapter.cs  FlatPlayerControllerAdapter.cs
Assets/GVR-Flat-Adapter/Scripts/: FlatClimbingAdapter.cs  FlatInteractionAdapter.cs  FlatPlayerControllerAdapter.cs
Assets/GVR-HVR-Adapter/Scripts/: HVRClimbingAdapter.cs  HVRPlayerControllerAdapter.cs  HVR_RegisterUiCanvas.cs  HVR_RegisterUiPointers.cs
Assets/GVR-OXR-Adapter/Scripts/: OXRClimbingAdapter.cs  OXRPlayerControllerAdapter.cs
Assets/GothicVR-Flat-Adapter/Scripts/: FlatDemoInjectable.cs  (+1 more)
Assets/GothicVR-Lab/: README.md
Assets/Plugins/: StandaloneFileBrowser.md
Assets/Resources/: PICOProjectSetting.asset  PicoSdkPCConfig.json  UxrGlobalSettings.asset
Assets/Romey/: BackgroundMaterial.mat  ButtonMaterial.mat  CloseMenueScript.cs  ImageController.cs  LoadFont.cs
Assets/Scenes/: SampleScene.unity
Assets/SteamVR/: readme.txt
Assets/SteamVR_Input/: SteamVR_Input_ActionSets.cs  SteamVR_Input_Actions.cs
Assets/StreamingAssets/: .gitignore  GameSettings.json
Assets/Szmyk_VdfsSharp/: LICENSE  README.md
Assets/XR/: XRGeneralSettings.asset
Docs/development/: daedalus-functions.md  developer-hints.md  links.md  unity.md
Docs/setup/: Gothic VR Unreal Community Remaster Tutorial  Nyras Prologue UEVR Tutorial.md  developer.md  player.md
Documentation/Images/: Gothic-Unity-as-ZenGine.drawio
ProjectSettings/: AudioManager.asset  BurstAotSettings_Android.json  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectSettings.asset.rej  QualitySettings.asset  TagManager.asset
UserSettings/: EditorUserSettings.asset
UserSettings/Layouts/: default-2022.dwlt
docs/: README.md  index.md
docs/development/: daedalus-functions.md  developer-hints.md  gothic-assets-loading.md
docs/setup/: developer.md  gamer.md  player.md
test-lib/: .gitignore  CMakeLists.txt  README.md  main.cc  main.cpp
(+644 files in other folders)
